--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
   },
   "dependencies": {
     "next": "12.1.0",
+    "polished": "^4.2.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/node": "^17.0.30",
+    "@types/react": "^17.0.8",
+    "@types/styled-components": "^5.1.25",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.10.0",
-    "eslint-config-next": "12.1.0"
+    "eslint-config-next": "12.1.0",
+    "typescript": "^4.6.4"
   }
 }
