--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
+    "axios": "^0.27.2",
     "next": "12.1.0",
+    "next-redux-wrapper": "^7.0.5",
     "polished": "^4.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.30.0",
+    "react-query": "^3.38.1",
+    "react-redux": "^8.0.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
