--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
+    "immer": "^9.0.12",
     "next": "12.1.0",
     "next-redux-wrapper": "^7.0.5",
     "polished": "^4.2.2",
