fix: chart type 오류 수정

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "@types/chart.js": "^2.9.37",
     "axios": "^0.27.2",
+    "chart.js": "^2.9.4",
     "immer": "^9.0.12",
     "next": "12.1.0",
     "next-redux-wrapper": "^7.0.5",
