--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.30.0",
+    "react-intersection-observer": "^9.2.0",
     "react-query": "^3.38.1",
     "react-redux": "^8.0.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
